# ddp-pinocchio

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt
benchmark/: CMakeLists.txt
cmake/: compiler_warnings.cmake  sanitizers.cmake  standard_project_settings.cmake
docs/: CMakeLists.txt  conf.py  index.rst
include/ddp/: cart_model.hpp  constraint.hpp  cost.hpp  ddp.hpp  ddp_bwd.ipp  ddp_fwd.ipp  dynamics.hpp  indexer.hpp  model.hpp  pendulum_model.hpp  pinocchio_model.hpp  pinocchio_model.ipp  problem.hpp  space.hpp  trajectory.hpp  zero.hpp
include/ddp/detail/: assertions.hpp  eigen.hpp  eigen.ipp  mat_seq.hpp  mat_seq_common.hpp  second_order_finite_diff.hpp  tensor.hpp  tuple.hpp  utils.hpp
include/ddp/internal/: derivative_storage.hpp  eigen.hpp  function_models.hpp  idx_transforms.hpp  matrix_seq.hpp  second_order_finite_diff.hpp  tensor.hpp  thread_pool.hpp  utils.hpp
include/mpfr/: enums.hpp  math.hpp  mp_float.hpp  mpfr.hpp
include/mpfr/detail/: epilogue.hpp  handle_as_mpfr.hpp  mpfr.hpp  prologue.hpp
scripts/: cartpole_traj.py  display_traj.py  merge_img.py  plots.py  remove_green.py
src/: ddp.cpp  lib.cpp
test/: CMakeLists.txt  cart_ddp.cpp  indexing.cpp  mat_seq.cpp  pendulum_ddp.cpp  pinocchio.cpp  pinocchio_ddp.cpp  pinocchio_double.cpp  pinocchio_jac.cpp  pinocchio_mpfr_1000.cpp  pinocchio_mpfr_500.cpp  pinocchio_spatial_eq_ddp.cpp  two_arms.cpp
test/include/: doctest.h
test/src/: backward.cpp  eigen_double.cpp  eigen_mpfr_1000.cpp  eigen_mpfr_500.cpp  lqr.cpp  pinocchio_double.cpp  pinocchio_long_double.cpp  pinocchio_mpfr.cpp  pinocchio_mpfr2.cpp  pinocchio_mpfr_500.cpp  test_main.cpp  ur5.cpp  ur5_terminal_constraint.cpp
